@@ -1,3 +1,9 @@
+2004-02-05  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl: brought code back to 8.0 compatability.
+	Use $_ as last cached result var (was ${}).
+	Ensure hoterrors garbage collection occurs across all tabs.
+
 2004-01-29  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl: first whack at tabbed consoles
